--- a/index.html
+++ b/index.html
@@ -3,101 +3,62 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🙂</title>
+<title>Prayer</title>
 
 <style>
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Comic Sans MS', 'Arial', sans-serif;
+    font-family: 'Georgia', serif;
   }
 
   body {
     height: 100vh;
-    background: radial-gradient(circle at center, #1a1a1a, #000);
+    background: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    overflow: hidden;
+    color: #333;
   }
 
-  .container {
+  .prayer-box {
+    max-width: 600px;
+    padding: 40px;
     text-align: center;
-    padding: 20px;
-    animation: shake 0.15s infinite alternate;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
   }
 
   h1 {
-    font-size: 2.2rem;
     margin-bottom: 20px;
-    text-shadow: 0 0 15px red;
+    font-size: 1.8rem;
   }
 
   p {
-    font-size: 1.4rem;
-    margin-bottom: 30px;
-    min-height: 60px;
-    color: #ff4d4d;
-  }
-
-  button {
-    padding: 12px 25px;
-    font-size: 1rem;
-    border: none;
-    border-radius: 30px;
-    background: linear-gradient(45deg, #ff0000, #ff6a00);
-    color: white;
-    cursor: pointer;
-    box-shadow: 0 0 20px rgba(255,0,0,0.6);
-  }
-
-  button:hover {
-    transform: scale(1.05);
-  }
-
-  @keyframes shake {
-    from { transform: translateX(-1px); }
-    to { transform: translateX(1px); }
+    font-size: 1.1rem;
+    line-height: 1.8;
   }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <h1>Be honest lang 😌</h1>
-  <p id="text">Loading…</p>
-  <button onclick="newInsult()">More pa 😈</button>
+<div class="prayer-box">
+  <h1>Prayer</h1>
+  <p>
+    Lord, thank You for this day.<br><br>
+    Thank You for the strength You give me,
+    even when I feel weak.<br><br>
+    Guide my thoughts, my words,
+    and my actions.<br><br>
+    Protect the people I love,
+    give me peace in my heart,
+    and help me trust Your plan.<br><br>
+    Amen.
+  </p>
 </div>
-
-<script>
-  const insults = [
-    "Laki ng ilong mo 😭",
-    "Limos fake nails 💅",
-    "Ang dumi ng bahay nyo 🏚️",
-    "Parang di ka mahal ng electric fan 🌀",
-    "asa sa magulang 🔋",
-    "Bakit parang ikaw yung amoy ulan ☔",
-    "Di ka panget, panget kalang talaga 😔",
-    "lapad nyan",
-    "type shi ng mga adik🤨",
-    "pabawas po filter iba iba mukha mo eh"
-  ];
-
-  const textEl = document.getElementById("text");
-
-  function newInsult() {
-    const random = insults[Math.floor(Math.random() * insults.length)];
-    textEl.textContent = random;
-  }
-
-  // auto change text
-  setInterval(newInsult, 2500);
-
-  newInsult();
-</script>
 
 </body>
 </html>
